tests/struct/bad/nested2.catala_en
## Article

```catala
declaration structure S:
  data x content E
  data y content integer

declaration enumeration E:
  -- Case1 content boolean
  -- Case2 content S

declaration scope A:
  context output x content E
```

```catala-test-cli
$ catala test-scope A
┌─[WARNING]─
│
│  The structure "S" is never used; maybe it's unnecessary?
│
├─➤ tests/struct/bad/nested2.catala_en:4.23-24:
│   │
│ 4 │ declaration structure S:
│   │                       ‾
└─ Article
┌─[WARNING]─
│
│  The enumeration "E" is never used; maybe it's unnecessary?
│
├─➤ tests/struct/bad/nested2.catala_en:8.25-26:
│   │
│ 8 │ declaration enumeration E:
│   │                         ‾
└─ Article
┌─[ERROR]─
│
│  Cyclic dependency detected between types.
│
│ Cycle type S, declared:
├─➤ tests/struct/bad/nested2.catala_en:4.23-24:
│   │
│ 4 │ declaration structure S:
│   │                       ‾
├─ Article
│
│ Used here in the definition of another cycle type E:
├─➤ tests/struct/bad/nested2.catala_en:10.20-21:
│    │
│ 10 │   -- Case2 content S
│    │                    ‾
├─ Article
│
│ Cycle type E, declared:
├─➤ tests/struct/bad/nested2.catala_en:8.25-26:
│   │
│ 8 │ declaration enumeration E:
│   │                         ‾
├─ Article
│
│ Used here in the definition of another cycle type S:
├─➤ tests/struct/bad/nested2.catala_en:5.18-19:
│   │
│ 5 │   data x content E
│   │                  ‾
└─ Article
#return code 123#
```
